@@ -22,6 +22,7 @@
 	(PokerRendererTests.test19_clickSitOutCoverage): Wrote method.
 	(PokerRendererTests.test20_handleMenuUnknownName): Wrote method.
 	(PokerRendererTests.test21_handleLobbyUnknownAction): Wrote method.
+	(PokerRendererTests.test22_currencySerial2NameNotString): Wrote method.
 
 	* pokerui/pokerrenderer.py (PokerRenderer._handleConnection):
 	error message for bad outfit should print outfits, not urls.
